[package]
name = "chat-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
libc = "0.2.154"
ratatui = "0.26.1"
tui-input = "*"
futures = { version = "0.3.30" }
async-std = "1.12.0"
serde = { version = "1.0.202", features = ["derive"] }
bincode = "1.3.3"
